load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/atpons/straightforward/cmd/straighforward",
    visibility = ["//visibility:private"],
    deps = [
        "//ssh_usocksd:go_default_library",
        "//vendor/github.com/cybozu-go/usocksd:go_default_library",
        "//vendor/github.com/cybozu-go/well:go_default_library",
        "//vendor/golang.org/x/crypto/ssh:go_default_library",
        "//vendor/golang.org/x/net/proxy:go_default_library",
    ],
)

go_binary(
    name = "straighforward",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
